--- a/.config/nvim/lua/snippets/package.json
+++ b/.config/nvim/lua/snippets/package.json
@@ -2,10 +2,15 @@
   "contributes": {
     "snippets": [
       {
-        "language": [
-          "lua"
-        ],
+        "language": "lua",
         "path": "./lua.json"
+      },
+      {
+        "language": [
+          "gitcommit",
+          "NeogitCommitMessage"
+        ],
+        "path": "./gitcommit.json"
       }
     ]
   }
