--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -7,3 +7,5 @@ language-servers = [{ name = "zk"}, {name = "marksman"}]
 roots = [".zk"]
 scope = "source.md"
 file-types = ["md"]
+formatter = { command = 'prettier', args = ["--parser", "markdown"] }
+auto-format = true
