--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -15,3 +15,6 @@ set -g display-time 4000
 
 # vi mode for commands
 set -g status-keys vi
+
+# Consecutive window numbers
+set -g renumber-windows on
